# change-journal

./: CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  Research.ipynb  justification.ipynb  setup.py
docs/: Makefile  conf.py  index.rst  make.bat
notebook/: Unit_testing.ipynb  sampling.ipynb
save_data/0045cfb58acfeb50e36e6ab828b529ba/: request.json  response.tiff
save_data/00dc7789552ec57a2fabe9ba235f6e9e/: request.json  response.tiff
save_data/00ea294a163866603e8cb9491b9ce313/: request.json  response.tiff
save_data/011c3ef061cd9bfe86f88b7bbed5a692/: request.json  response.tiff
save_data/01518f3f1a28a5790d1b62d2bdd422ab/: request.json  response.tiff
save_data/02eb9dbebb1c1c4229be05cd3fd6be5f/: request.json  response.tiff
save_data/03685055b6cdbd9fd9cb488a0babacde/: request.json  response.tiff
save_data/039bed691a76da446568f69df32913a1/: request.json  response.tiff
save_data/0404ac372b823cfa07d2bb05289a24ed/: request.json  response.tiff
save_data/04b993977b39fb3eb3f587a6688a866b/: request.json  response.tiff
save_data/04d201af502aeab50abd80bad428c744/: request.json  response.tiff
save_data/04db5125bf38fbabe99c61c025e86eac/: request.json  response.tiff
save_data/05731dba35f5b9d0a25b012fcd9ee9b9/: request.json  response.tiff
save_data/05cd8993e557d71853106bdd94c76faa/: request.json  response.tiff
save_data/06f9c7f1966bdd6c5a959b59ac63cdd5/: request.json  response.tiff
save_data/072b2dee58cf01846cf8697a0648e934/: request.json  response.tiff
save_data/073f7811059b43e8d04de0ea42f28f99/: request.json  response.tiff
save_data/08009f174b97e264f686e0718ac30745/: request.json  response.tiff
save_data/080d7f7bd825234567b1e98f6054f4b3/: request.json  response.tiff
save_data/08488774cea1fdf0c660fadcb4faf5b7/: request.json  response.tiff
save_data/0848bae9fe4c041cb0c821400cf315ac/: request.json  (+1 more)
src/: lib.rs
testing/: unit_test.py
(+1047 files in other folders)
