[package]
name = "change-journal"
version = "0.1.0"
authors = [
    "Khyber Sen <kkysen@gmail.com>",
    "Saquib Shazad <saquib.shahzad@uwaterloo.ca>",
    "Asif Mallik <asif.mallik@columbia.edu>",
    "Rickson Yang <rixin.yang.2001@gmail.com>",
]
edition = "2018"
description = "A unified change journal-like API for Linux and Windows that lets you monitor entire filesystems, mount points, and/or volumes for file change events. It uses fanotify on Linux and the USN Journal on Windows."
license = "MIT"
repository = "https://github.com/codeprentice-org/change-journal"
homepage = "https://github.com/codeprentice-org/change-journal/blob/main/README.md"
readme = "README.md"
categories = ["filesystem", "os::linux-apis", "os::windows-apis"]
keywords = ["journal", "fanotify", "USN", "watch", "filesystem"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.21"
fanotify = "0.1.0"
usn-journal = "0.1.0"
